--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="mbr-section info4 cid-7Kldw7U2Yz mbr-fullscreen" data-bg-video="https://youtu.be/lRTtMcx6rSM" id="design-block-7Kldw7U2Yz">
+<section class="mbr-section info4 cid-7Kldw7U2Yz mbr-fullscreen" data-bg-video="https://youtu.be/lRTtMcx6rSM?t=1?loop=1" id="design-block-7Kldw7U2Yz">
 
     
 
@@ -257,6 +257,39 @@ document.onmouseup = mousehandler;
               <br>Disable mouse right-click - This line is not published, it's only for ease of access to the blue gear<br>
 				
     </div></div>
+</section>
+
+<section style="overflow: hidden;" class="cid-bo0EmPefHj" id="design-block-bo0EmPefHj">
+
+
+
+<img src="https://res.cloudinary.com/ezenwa/image/upload/v1590745237/test-bars_yednyc.svg" width="100%" height="100%" class="hide">
+<video width="100%" height="100%" playsinline="playsinline" controlslist="nodownload" autoplay="" loop="" class="show" muted="true">
+<source type="video/mp4" src="https://res.cloudinary.com/qwertyuiopasdfghjklzxcvbnm/video/upload/v1627268914/Untitled_bonekq.mp4">
+</video>
+
+<div class="overlay"></div>
+
+<div class="container align-center">
+<div class="row justify-content-md-center">
+<div class="mbr-white col-md-10">
+<h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">PLANET EARTH</h1>
+<h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Our home in the universe</h3>
+<p class="mbr-text pb-3 mbr-fonts-style display-5">With a radius of 3,959 miles, Earth is the fifth largest planet in our solar system, and it's the only one known for sure to have liquid water on its surface.</p>
+<div class="mbr-section-btn">
+<a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">LEARN MORE</a>
+<a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">WATCH VIDEO</a>
+</div>
+</div>
+</div>
+</div>
+
+<div id="goDown" class="mbr-arrow hidden-sm-down" aria-hidden="true">
+<a href="#next">
+<i class="mbri-down mbr-iconfont"></i>
+</a>
+</div>
+
 </section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
