--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
   
   <title>r0ttenapple</title>
+  <link rel="stylesheet" href="assets/material-design/css/material-icons.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -259,7 +260,7 @@ document.onmouseup = mousehandler;
     </div></div>
 </section>
 
-<section style="overflow: hidden;" class="cid-bo0EmPefHj" id="design-block-bo0EmPefHj">
+<section style="overflow: hidden;" class="cid-bo0EmPefHj mbr-fullscreen" id="design-block-bo0EmPefHj">
 
 
 
@@ -273,27 +274,19 @@ document.onmouseup = mousehandler;
 <div class="container align-center">
 <div class="row justify-content-md-center">
 <div class="mbr-white col-md-10">
-<h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">PLANET EARTH</h1>
-<h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Our home in the universe</h3>
-<p class="mbr-text pb-3 mbr-fonts-style display-5">With a radius of 3,959 miles, Earth is the fifth largest planet in our solar system, and it's the only one known for sure to have liquid water on its surface.</p>
-<div class="mbr-section-btn">
-<a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">LEARN MORE</a>
-<a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">WATCH VIDEO</a>
-</div>
+<h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">w31c0m3</h1>
+
+<p class="mbr-text pb-3 mbr-fonts-style display-4">Welcome to r0ttenapple! Here you can dowload my Custom Themes, Icons, Wallpapers, Cool Config Profiles, Shortcuts, Testflight's and even Beta Profiles and More.</p>
+<div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co"><span class="material material-call-made mbr-iconfont mbr-iconfont-btn">&nbsp;</span></a></div>
 </div>
 </div>
 </div>
 
-<div id="goDown" class="mbr-arrow hidden-sm-down" aria-hidden="true">
-<a href="#next">
-<i class="mbri-down mbr-iconfont"></i>
-</a>
-</div>
+
 
 </section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
   </body>
 </html>
