--- a/apps.html
+++ b/apps.html
@@ -24,7 +24,22 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  ::-webkit-scrollbar{
+width: 5px;
+height: 5px;
+}
+::-webkit-scrollbar-thumb{
+background: #9c00ff;
+border-radius: 30px;
+}
+::-webkit-scrollbar-thumb:hover{
+background: #9C00FF;
+}
+::-webkit-scrollbar-track{
+background: #F0F0F0;
+border-radius: 0px;
+box-shadow: inset 0px 0px 0px 0px #F0F0F0;
+}
   
 </head>
 <body>
@@ -54,16 +69,9 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobiri.se">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobiri.se">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
+                    <a class="nav-link link text-white text-primary display-4" href="home.html">Home</a>
+                </li><li class="nav-item">
+                    <a class="nav-link link text-white text-primary display-4" href="page9.html">Credits</a>
                 </li></ul>
             
         </div>
