--- a/filesystem.html
+++ b/filesystem.html
@@ -25,7 +25,22 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  ::-webkit-scrollbar{
+width: 5px;
+height: 5px;
+}
+::-webkit-scrollbar-thumb{
+background: #9c00ff;
+border-radius: 30px;
+}
+::-webkit-scrollbar-thumb:hover{
+background: #9C00FF;
+}
+::-webkit-scrollbar-track{
+background: #F0F0F0;
+border-radius: 0px;
+box-shadow: inset 0px 0px 0px 0px #F0F0F0;
+}
   
 </head>
 <body>
@@ -55,16 +70,9 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobiri.se">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobiri.se">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
+                    <a class="nav-link link text-white text-primary display-4" href="home.html">Home</a>
+                </li><li class="nav-item">
+                    <a class="nav-link link text-white text-primary display-4" href="page9.html">Credits</a>
                 </li></ul>
             
         </div>
@@ -84,16 +92,16 @@
                         <strong>Hidden Settings</strong></h3>
                     
                 </div>
-                <div id="bootstrap-accordion_22" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_25" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse1_22" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse1_25" aria-expanded="false" aria-controls="collapse1">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Show iMessage Debug Settings</strong>
                                 </h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse1_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse1_25" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_25">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">Open /var/mobile/library/preferences/.GlobalPreferences.plist<br><br>Add a new value called "iMessageDiagnostisEnabled" set it to boolean and yes<br><br>Now restart or respring and your done</p>
                             </div>
@@ -101,12 +109,12 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse2_22" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse2_25" aria-expanded="false" aria-controls="collapse2">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Show hidden safari sharesheet options&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse2_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse2_25" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_25">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">
                                     Open /var/mobile/library/preferences/.GlobalPreferences.plist<br><br>Add a new value called "SafariDebugOverrideLaunchMode" set its value to number and set the number to zero<br><br>Now restart or respring and your done<br></p>
@@ -115,12 +123,12 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse3_22" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse3_25" aria-expanded="false" aria-controls="collapse3">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Show RSSI in status bar</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse3_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse3_25" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_25">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">Open /var/mobile/library/preferences/.GlobalPreferences.plist<br><br>Add a new value called "SBShowRSSI" set its value to boolean and set the value to yes<br><br>Now restart or respring and your done</p>
                             </div>
@@ -128,12 +136,12 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse4_22" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse4_25" aria-expanded="false" aria-controls="collapse4">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Show build number in status bar</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse4_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse4_25" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_25">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">Open /var/mobile/library/preferences/.GlobalPreferences.plist<br><br>Add a new value called "UIStatusBarShowBuildVersion" set it to boolean and yes<br><br>Now restart or respring and your done</p>
                             </div>
@@ -141,12 +149,12 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse5_22" aria-expanded="false" aria-controls="collapse5">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse5_25" aria-expanded="false" aria-controls="collapse5">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Show itens tab in find my permanently&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse5_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse5_25" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_25">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">Open /var/mobile/library/preferences/com.apple.findmy.fmipcore.notbackedup.plist<br><br>find the value "savedItemsTabEnabled" if it is not there add it, then set the boolean value to yes<br><br>find the value "itemsTabEnabled" if it is not there add it, then set the boolean value to yes<br><br>Now restart or respring and your done</p>
                             </div>
@@ -154,12 +162,12 @@
                     </div>
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse6_22" aria-expanded="false" aria-controls="collapse6">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse6_25" aria-expanded="false" aria-controls="collapse6">
                                 <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7">Show stats in mesure app</h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
-                        <div id="collapse6_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_22">
+                        <div id="collapse6_25" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_25">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-4">Open /var/mobile/library/preferences/com.apple.measure.plist<br><br>Find the value "kShowStatistics" and set its boolean value to yes<br><br>Now restart or respring and your done</p>
                             </div>
