--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">w31c0m3</h1>
 
 <p class="mbr-text pb-3 mbr-fonts-style display-4">Welcome to r0ttenapple! Here you can dowload my Custom Themes, Icons, Wallpapers, Cool Config Profiles, Shortcuts, Testflight's and even Beta Profiles and More.</p>
-<div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="home.html">Lets Go!<br></a></div>
+<div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="home.html">Lets Go!</a></div>
 </div>
 </div>
 </div>
